corrected alignment problems on iPhone4 and other extra small screen size

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
 * {
 	font-family: 'Raleway', sans-serif;
 }
-.myLogo {
-	max-height: 100px;
-}
 hr {
 	border-bottom: 4px solid #aaaaaa;
 }
